--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./lib/passport-predix-oauth",
   "dependencies": {
     "pkginfo": "0.2.x",
-    "passport-oauth": "0.1.x"
+    "passport-oauth": "0.1.x",
+    "https-proxy-agent": "^1.0.0"
   },
   "devDependencies": {
     "vows": "0.6.x"
